# 2024-congressional-elections

./: .gitignore  notes_about_projections.txt  pyproject.toml  todo.txt
election-data/: elections2024.csv
map-data-census/: tl_2024_us_state.shp.ea.iso.xml  tl_2024_us_state.shp.iso.xml
src/: check_winners.py  hr_election_explorer.py  scrape.py  to_text.py
src/2024_congressional_elections/: __init__.py
src/HRElectViz/: DistrictsGeoData.py  GerryMeter.py  HrElection.py  datasources.py  ushelper.py
src/HRElectViz/altair-graphics/: partisan_bias_altair.py
src/altair-graphics/: partisan_bias_altair.py
src/app/: hr_election_explorer.py
src/hrelectviz/: districtsgeodata.py  gerrymeter.py  hrelection.py
src/plotly-graphics/: W  partisan_bias_plotly.py
src/scripts/: .gitignore  check_winners.py  gerrymander_metrics_plotly.py  get_columns.py  make_election_table.py  partisan_bias_altair.py  partisan_bias_plotly.py  scrape.py  to_text.py
