[project]
name = "HRElectViz"
version = "0.1.0"
description = "Fetch and visualize data from biennial U.S. House of Representatives elections"
readme = "README.md"
authors = [
    { name = "david", email = "david.nadler@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "great-tables>=0.20.0",
    "itables>=2.5.2",
    "kaleido>=1.2.0",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pdfplumber>=0.11.8",
    "plotly>=6.4.0",
    "polars>=1.35.1",
    "pyproj>=3.7.2",
    "pyshp>=3.0.2.post1",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "streamlit>=1.51.0",
    "types-requests>=2.32.4.20250913",
    "urllib3>=2.5.0",
    "us>=3.2.0",
    "vl-convert-python>=1.8.0",
]


[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
